# boilerplate-demo

./: .gitmodules  CMakeLists.txt  Makefile  README.md
common/: demo_internal.h  xmtoc
dummy-template/: CMakeLists.txt  demo.h  main.c  scene1.c  xmdata.h
src/: CMakeLists.txt  demo.h  headerify.c  main.c  mus.xm  pack  scene2.c
