CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(demos C)

FUNCTION(OPTION_AND_DEFINE name description default_value)
OPTION(${name} ${description} ${default_value})
IF(${name})
ADD_DEFINITIONS(-D${name}=1)
ELSE()
ADD_DEFINITIONS(-D${name}=0)
ENDIF()
ENDFUNCTION()

OPTION_AND_DEFINE(DEMOS_DEBUG "Enable debugging messages" "ON")

SET(GLFW_BUILD_SHARED_LIBS OFF)
SET(GLFW_BUILD_EXAMPLES OFF)
SET(GLFW_BUILD_TESTS OFF)
SET(GLFW_BUILD_DOCS OFF)
SET(GLFW_INSTALL OFF)

SET(XM_BUILD_SHARED_LIBS OFF)
SET(XM_BUILD_EXAMPLES OFF)
SET(XM_DEMO_MODE ON)
SET(XM_DEFENSIVE OFF)
SET(XM_DEBUG OFF)

ADD_SUBDIRECTORY(ext/libxm)
ADD_SUBDIRECTORY(ext/glfw)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_SEARCH_MODULE(AO REQUIRED ao)

FIND_PACKAGE(Threads REQUIRED)


INCLUDE_DIRECTORIES(${AO_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(ext/libxm/include)
INCLUDE_DIRECTORIES(ext/glfw/include)
INCLUDE_DIRECTORIES(common)

LIST(APPEND DEMOS_LINK_LIBS ${XM_LIBRARIES})
LIST(APPEND DEMOS_LINK_LIBS xms)
LIST(APPEND DEMOS_LINK_LIBS ${AO_LIBRARIES})
LIST(APPEND DEMOS_LINK_LIBS ${GLFW_LIBRARIES})
LIST(APPEND DEMOS_LINK_LIBS glfw)
LIST(APPEND DEMOS_LINK_LIBS ${CMAKE_THREAD_LIBS_INIT})

ADD_DEFINITIONS("-g -Os -Wall -pedantic --std=c11 -fdata-sections -ffunction-sections")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections")
ADD_SUBDIRECTORY(dummy-template)
