CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(demos C)

FUNCTION(OPTION_AND_DEFINE name description default_value)
OPTION(${name} ${description} ${default_value})
IF(${name})
ADD_DEFINITIONS(-D${name}=1)
ELSE()
ADD_DEFINITIONS(-D${name}=0)
ENDIF()
ENDFUNCTION()

OPTION_AND_DEFINE(DEMOS_DEBUG "Enable debugging messages" "ON")

SET(XM_BUILD_SHARED_LIBS OFF)
SET(XM_BUILD_EXAMPLES OFF)
SET(XM_DEMO_MODE ON)
SET(XM_DEFENSIVE OFF)
SET(XM_DEBUG OFF)

ADD_SUBDIRECTORY(ext/libxm)

FIND_PACKAGE(ALSA REQUIRED)
FIND_PACKAGE(X11 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

ADD_DEFINITIONS(-D_POSIX_SOURCE)

INCLUDE_DIRECTORIES(${ALSA_INCLUDE_DIRS} ${X11_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
INCLUDE_DIRECTORIES(ext/libxm/include common)

LIST(APPEND DEMOS_LINK_LIBS ${ALSA_LIBRARIES} ${X11_LIBRARIES} ${OPENGL_LIBRARIES})
LIST(APPEND DEMOS_LINK_LIBS ${XM_LIBRARIES} m xms)

ADD_DEFINITIONS("-g -Os -Wall -pedantic --std=c11 -fdata-sections -ffunction-sections")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections")

ADD_SUBDIRECTORY(dummy-template)
