ADD_EXECUTABLE(headerify headerify.c)
ADD_CUSTOM_COMMAND(OUTPUT mus.h COMMAND headerify mus ${CMAKE_CURRENT_SOURCE_DIR}/mus.xm DEPENDS headerify ${CMAKE_CURRENT_SOURCE_DIR}/mus.xm)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_EXECUTABLE(demo demo.h mus.h main.c scene1.c scene2.c)
TARGET_LINK_LIBRARIES(demo ${DEMOS_LINK_LIBS})

ADD_CUSTOM_COMMAND(OUTPUT demo.packed COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/pack demo demo.packed DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/pack demo)
ADD_CUSTOM_TARGET(packed ALL DEPENDS demo.packed)
